--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/nx7-icon.png">
     <title>nx7</title>
 
     <!-- PWA -->
@@ -67,20 +68,8 @@
                 <section id="section-radio" class="section section--radio">
                     <div class="section__inner section--radio__inner">
                         <h2 class="section__headline">Rádio</h2>
-                        <div class="radio__radios">
-                            <button type="button" class="radio__button radio__button--junior">
-                                <span class="material-icons">play_circle_outline</span>
-                                Junior
-                            </button>
-                            <button type="button" class="radio__button radio__button--fm">
-                                <span class="material-icons">play_circle_outline</span>
-                                _FM
-                            </button>
-                            <button type="button" class="radio__button radio__button--slovensko">
-                                <span class="material-icons">play_circle_outline</span>
-                                Slovensko
-                            </button>
-                        </div>
+                        <div id="radios" class="radio__radios"></div>
+                        <audio id="radio-player" src=""></audio>
                     </div>
                 </section>
 
