--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="section__inner section--radio__inner">
                         <h2 class="section__headline">Rádio</h2>
                         <div id="radios" class="radio__radios"></div>
-                        <audio id="radio-player" src="" preload="none" crossorigin="anonymous"></audio>
+                        <audio id="radio-player" src="" preload="none"></audio>
                     </div>
                 </section>
 
