--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="icon" type="image/png" sizes="512x512" href="/icons/nx7-icon.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="icons/nx7-icon.png">
     <title>nx7</title>
 
     <!-- PWA -->
