--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                     <div class="section__inner section--forecast__inner">
                         <h2 class="section__headline">Počasie</h2>
                         <div class="forecast__wrapper">
-                            <div id="forecast" class="forecast__inner"></div>
+                            <div id="forecast" class="forecast__inner">
+                                <div id="forecast-chart" class="forecast__chart"></div>
+                            </div>
                         </div>
                     </div>
                 </section>
