--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <section id="section-calendar" class="section section--calendar">
                     <div class="section__inner section--calendar__inner">
                         <h2 class="section__headline">Kalendár</h2>
+                        <div id="calendar" class="calendar__wrapper"></div>
                     </div>
                 </section>
 
